Remove fixed width of a table cell
The timestamp value was too long to fit the cell and was shrinked. Without the
fix value, the 100% width is used (as specified in the parent selector), which
seems to work just fine.

--- a/frontend/src/app/UI/listView/listView.component.css
+++ b/frontend/src/app/UI/listView/listView.component.css
@@ -257,7 +257,7 @@ virtual-scroll {
 }
 
 .larger-table-block {
-    width: 155px;
+    /*width: 155px;*/
 }
 
 .large-table-block {
